--- a/TeachSystem/TeachSystem.csproj
+++ b/TeachSystem/TeachSystem.csproj
@@ -52,6 +52,7 @@
   <PropertyGroup>
     <StartupObject>TeachSystem.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,6 +67,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\classes\Answer.cs" />
+    <Compile Include="src\forms\AboutBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\forms\AboutBox.Designer.cs">
+      <DependentUpon>AboutBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\forms\teacher\createTest\CreateTest.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -109,6 +116,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="src\forms\AboutBox.resx">
+      <DependentUpon>AboutBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\forms\teacher\createTest\CreateCriteria.resx">
       <DependentUpon>CreateCriteria.cs</DependentUpon>
     </EmbeddedResource>
