Added Student. Authorisation complited. In Progress Testing for Student

--- a/TeachSystem/Properties/Settings.settings
+++ b/TeachSystem/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="teacher_id" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="student_id" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
