--- a/TeachSystem/app.config
+++ b/TeachSystem/app.config
@@ -14,6 +14,9 @@
             <setting name="teacher_id" serializeAs="String">
                 <value />
             </setting>
+            <setting name="student_id" serializeAs="String">
+                <value />
+            </setting>
         </TeachSystem.Properties.Settings>
     </userSettings>
 </configuration>
