--- a/TeachSystem/TeachSystem.csproj
+++ b/TeachSystem/TeachSystem.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -66,6 +67,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\classes\ReportStud.cs" />
+    <Compile Include="src\classes\ReportTeach.cs" />
+    <Compile Include="src\forms\student\createReport\Report%28stud%29.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\forms\student\createReport\Report%28stud%29.Designer.cs">
+      <DependentUpon>Report%28stud%29.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\forms\student\Testing\TestResultForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +92,18 @@
     </Compile>
     <Compile Include="src\forms\student\Testing\TestInfoForm.Designer.cs">
       <DependentUpon>TestInfoForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\forms\teacher\createReport\GraphicForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\forms\teacher\createReport\GraphicForm.Designer.cs">
+      <DependentUpon>GraphicForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\forms\teacher\createReport\Report_teach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\forms\teacher\createReport\Report_teach.Designer.cs">
+      <DependentUpon>Report_teach.cs</DependentUpon>
     </Compile>
     <Compile Include="src\StringEditor.cs" />
     <Compile Include="src\classes\Answer.cs" />
@@ -163,6 +184,9 @@
     <EmbeddedResource Include="src\forms\AboutBox.resx">
       <DependentUpon>AboutBox.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="src\forms\student\createReport\Report%28stud%29.resx">
+      <DependentUpon>Report%28stud%29.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\forms\student\StudentMainForm.resx">
       <DependentUpon>StudentMainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -174,6 +198,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="src\forms\student\Testing\TestInfoForm.resx">
       <DependentUpon>TestInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\forms\teacher\createReport\GraphicForm.resx">
+      <DependentUpon>GraphicForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\forms\teacher\createReport\Report_teach.resx">
+      <DependentUpon>Report_teach.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\forms\teacher\createTech\CreateTeacher.resx">
       <DependentUpon>CreateTeacher.cs</DependentUpon>
